# coursera-ds-and-algos

./: .gitignore  CMakeLists.txt  README.md
1-algorithmic-toolbox/: CMakeLists.txt  README.md
1-algorithmic-toolbox/week1_programming_challenges/: 1_sum_of_two_digits.py  CMakeLists.txt
1-algorithmic-toolbox/week1_programming_challenges/2_maximum_pairwise_product/: 2_maximum_pairwise_product.cpp  CMakeLists.txt
1-algorithmic-toolbox/week2_programming_challenges/1_fibonacci_number/: 1_fibonacci_number.cpp  CMakeLists.txt
1-algorithmic-toolbox/week2_programming_challenges/2_last_digit_of_fibonacci_number/: 2_last_digit_of_fibonacci_number.cpp  CMakeLists.txt
1-algorithmic-toolbox/week2_programming_challenges/3_greatest_common_divisor/: 3_greatest_common_divisor.cpp  CMakeLists.txt
1-algorithmic-toolbox/week2_programming_challenges/4_least_common_multiple/: 4_least_common_multiple.cpp  CMakeLists.txt
1-algorithmic-toolbox/week2_programming_challenges/5_fibonacci_number_again/: 5_fibonacci_number_again.cpp  CMakeLists.txt
1-algorithmic-toolbox/week2_programming_challenges/6_last_digit_of_the_sum_of_fibonacci_numbers/: 6_last_digit_of_the_sum_of_fibonacci_numbers.cpp  CMakeLists.txt
1-algorithmic-toolbox/week2_programming_challenges/7_last_digit_of_the_sum_of_fibonacci_numbers_again/: 7_last_digit_of_the_sum_of_fibonacci_numbers_again.cpp  CMakeLists.txt
1-algorithmic-toolbox/week2_programming_challenges/8_last_digit_of_the_sum_of_squares_of_fibonacci_numbers/: CMakeLists.txt  (+1 more)
1-algorithmic-toolbox/week4_programming_challenges/: CMakeLists.txt
(+98 files in other folders)
