cmake_minimum_required(VERSION 3.18)
project(algorithms_and_ds LANGUAGES CXX)

# add_subdirectory("1-algorithmic-toolbox/week1_programming_challenges")
# add_subdirectory("1-algorithmic-toolbox/week2_programming_challenges")
# add_subdirectory("1-algorithmic-toolbox/week3_programming_challenges")
add_subdirectory("1-algorithmic-toolbox/week4_programming_challenges")
